# RESDSQL

./: .gitignore  README.md  my_schema_item_classifier.py  my_text2sql.py  pyproject.toml  schema_item_classifier.py  text2sql_1.py
NatSQL/: my_table_transform.py  natsql_utils.py
NatSQL/natsql2sql/: natsql_parser.py
NatSQL/natsql2sql/preprocess/: TokenString.py
scripts/inference/: infer_text2natsql_cspider_my.sh
utils/: classifier_model.py  text2sql_decoding_utils.py
